--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "JihyunLab Prettier config.",
   "license": "MIT",
-  "author": "JihyunLab <jihyunlab@gmail.com>",
-  "contributors": [
-    "Philjung Yun <philjung.yun@gmail.com>",
-    "Donghyun Kim <naokinaoki1225@gmail.com>"
-  ],
+  "author": "JihyunLab <jihyunlab@gmail.com> (https://github.com/jihyunlab)",
   "homepage": "https://github.com/jihyunlab/prettier-config",
+  "contributors": [
+    "Philjung Yun <philjung.yun@gmail.com> (https://github.com/jihyunlab)",
+    "Donghyun Kim <naokinaoki1225@gmail.com> (https://github.com/jihyunlab)"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jihyunlab/prettier-config"
+    "url": "https://github.com/jihyunlab/prettier-config.git"
+  },
+  "bugs": {
+    "url": "http://github.com/jihyunlab/prettier-config/issues",
+    "email": "jihyunlab@gmail.com"
   },
   "main": ".prettierrc.json",
   "scripts": {},
