--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jihyunlab/prettier-config",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "JihyunLab Prettier config.",
   "license": "MIT",
   "author": "JihyunLab <jihyunlab@gmail.com> (https://github.com/jihyunlab)",
@@ -10,9 +10,9 @@
   "main": ".prettierrc.json",
   "scripts": {},
   "peerDependencies": {
-    "prettier": "^2.8.4",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "prettier": ">=2.0.0",
+    "eslint-config-prettier": ">=8.0.0",
+    "eslint-plugin-prettier": ">=4.0.0"
   },
   "keywords": [
     "jihyunlab",
