--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jihyunlab/prettier-config",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "JihyunLab Prettier config.",
   "license": "MIT",
   "author": "JihyunLab <info@jihyunlab.com> (https://jihyunlab.com)",
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "lint": "eslint **/*.{ts,tsx,mts,cts}"
+    "lint": "eslint **/*.{ts,tsx,mts,cts}",
+    "prettier": "prettier --check **/*.{ts,tsx,mts,cts}"
   },
   "keywords": [
     "prettier",
